--- a/src/main/resources/com/example/focaap/faceApp.fxml
+++ b/src/main/resources/com/example/focaap/faceApp.fxml
@@ -17,22 +17,21 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
-
-
 <?import javafx.scene.control.TextField?>
+
 <Pane xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.focaap.controller.FaceAppContrl"
       maxHeight="1.7976931348623157E308"
       maxWidth="1.7976931348623157E308"
-      prefHeight="400.0"
-      prefWidth="600.0"
+      prefHeight="Infinity"
+      prefWidth="Infinity"
       xmlns="http://javafx.com/javafx/11">
    <children>
-      <BorderPane prefHeight="400.0" prefWidth="600.0">
+      <BorderPane prefHeight="-Infinity" prefWidth="-Infinity">
          <top>
             <VBox prefHeight="50.0" prefWidth="590.0" BorderPane.alignment="CENTER">
                <children>
-                  <MenuBar minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="600.0">
+                  <MenuBar minHeight="30.0" minWidth="Infinity" prefHeight="26.0" prefWidth="600.0">
                     <menus>
                       <Menu mnemonicParsing="false" text="File">
                         <items>
@@ -53,7 +52,7 @@
                   </MenuBar>
                   <HBox fx:id="hBox">
                       <Button mnemonicParsing="false" text="+" onAction="#tabsAdd"/>
-                      <TextField fx:id="tFi" layoutX="50.0" layoutY="70.0" prefHeight="30.0" prefWidth="300.0" promptText="E-mail"/>
+                      <TextField fx:id="tFi" layoutX="50.0" layoutY="70.0" prefHeight="30.0" prefWidth="-Infinity" promptText="E-mail"/>
                      <!--<children>
                         <Button mnemonicParsing="false" text="+" fx:id="addTabButton" onAction="#tabsAdd"/>
                         <TabPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="575.0" tabClosingPolicy="UNAVAILABLE">
