--- a/src/main/resources/com/example/focaap/faceApp.fxml
+++ b/src/main/resources/com/example/focaap/faceApp.fxml
@@ -19,90 +19,91 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.TextField?>
 
+<?import javafx.scene.control.TextField?>
 <Pane xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.focaap.controller.FaceAppContrl"
       maxHeight="1.7976931348623157E308"
       maxWidth="1.7976931348623157E308"
-      prefHeight="Infinity"
-      prefWidth="Infinity"
+      prefHeight="400.0"
+      prefWidth="600.0"
       xmlns="http://javafx.com/javafx/11">
-   <children>
-      <BorderPane prefHeight="-Infinity" prefWidth="-Infinity">
-         <top>
-            <VBox prefHeight="50.0" prefWidth="590.0" BorderPane.alignment="CENTER">
-               <children>
-                  <MenuBar minHeight="30.0" minWidth="Infinity" prefHeight="26.0" prefWidth="600.0">
-                    <menus>
-                      <Menu mnemonicParsing="false" text="File">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Close" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Edit">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Delete" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Help">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="About" />
-                        </items>
-                      </Menu>
-                    </menus>
-                  </MenuBar>
-                  <HBox fx:id="hBox">
-                      <Button mnemonicParsing="false" text="+" onAction="#tabsAdd"/>
-                      <TextField fx:id="tFi" layoutX="50.0" layoutY="70.0" prefHeight="30.0" prefWidth="-Infinity" promptText="E-mail"/>
-                     <!--<children>
-                        <Button mnemonicParsing="false" text="+" fx:id="addTabButton" onAction="#tabsAdd"/>
-                        <TabPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="575.0" tabClosingPolicy="UNAVAILABLE">
-                          <tabs>
-                            <Tab text="Main">
-                                <content>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                </content>
-                            </Tab>
-                            <Tab text="Next">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                              </content>
-                            </Tab>
-                          </tabs>
-                        </TabPane>
-                     </children>-->
-                  </HBox>
-               </children>
-            </VBox>
-         </top>
-         <right>
-            <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <children>
-                  <ChoiceBox layoutX="4.0" layoutY="23.0" prefHeight="25.0" prefWidth="195.0" />
-                  <ChoiceBox layoutX="3.0" layoutY="147.0" prefHeight="10.0" prefWidth="195.0" />
-                  <Label layoutX="14.0" layoutY="6.0" text="Тип сваи" />
-                  <Label layoutX="13.0" layoutY="130.0" text="Геология" />
-                  <Label layoutX="13.0" layoutY="56.0" text="Сечение сваи" />
-               </children>
-            </Pane>
-         </right>
-         <left>
-            <ToolBar orientation="VERTICAL" prefHeight="348.0" prefWidth="26.0">
-              <items>
-                <Button mnemonicParsing="false" text="+" />
-                  <Button mnemonicParsing="false" text="+" />
-              </items>
-            </ToolBar>
-         </left>
-         <bottom>
-            <ProgressBar prefWidth="200.0" progress="0.0" BorderPane.alignment="TOP_LEFT" />
-         </bottom>
-         <center>
-            <SubScene height="319.0" width="357.0" BorderPane.alignment="CENTER">
-              <root>
-                <Region />
-              </root>
-            </SubScene>
-         </center>
-      </BorderPane>
-   </children>
+    <children>
+        <BorderPane prefHeight="400.0" prefWidth="600.0">
+            <top>
+                <VBox prefHeight="50.0" prefWidth="590.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <MenuBar minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="600.0">
+                            <menus>
+                                <Menu mnemonicParsing="false" text="File">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" text="Close" />
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Edit">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" text="Delete" />
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Help">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" text="About" />
+                                    </items>
+                                </Menu>
+                            </menus>
+                        </MenuBar>
+                        <HBox fx:id="hBox">
+                            <Button mnemonicParsing="false" text="+" onAction="#tabsAdd"/>
+                            <TextField fx:id="tFi" layoutX="50.0" layoutY="70.0" prefHeight="30.0" prefWidth="300.0" promptText="E-mail"/>
+                            <!--<children>
+                               <Button mnemonicParsing="false" text="+" fx:id="addTabButton" onAction="#tabsAdd"/>
+                               <TabPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="575.0" tabClosingPolicy="UNAVAILABLE">
+                                 <tabs>
+                                   <Tab text="Main">
+                                       <content>
+                                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </content>
+                                   </Tab>
+                                   <Tab text="Next">
+                                     <content>
+                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                     </content>
+                                   </Tab>
+                                 </tabs>
+                               </TabPane>
+                            </children>-->
+                        </HBox>
+                    </children>
+                </VBox>
+            </top>
+            <right>
+                <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <ChoiceBox layoutX="4.0" layoutY="23.0" prefHeight="25.0" prefWidth="195.0" />
+                        <ChoiceBox layoutX="3.0" layoutY="147.0" prefHeight="10.0" prefWidth="195.0" />
+                        <Label layoutX="14.0" layoutY="6.0" text="Тип сваи" />
+                        <Label layoutX="13.0" layoutY="130.0" text="Геология" />
+                        <Label layoutX="13.0" layoutY="56.0" text="Сечение сваи" />
+                    </children>
+                </Pane>
+            </right>
+            <left>
+                <ToolBar orientation="VERTICAL" prefHeight="348.0" prefWidth="26.0">
+                    <items>
+                        <Button mnemonicParsing="false" text="+" />
+                        <Button mnemonicParsing="false" text="+" />
+                    </items>
+                </ToolBar>
+            </left>
+            <bottom>
+                <ProgressBar prefWidth="200.0" progress="0.0" BorderPane.alignment="TOP_LEFT" />
+            </bottom>
+            <center>
+                <SubScene height="319.0" width="357.0" BorderPane.alignment="CENTER">
+                    <root>
+                        <Region />
+                    </root>
+                </SubScene>
+            </center>
+        </BorderPane>
+    </children>
 </Pane>
